--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   auto_route: ^7.8.4
   auto_route_generator: ^7.3.2
+  mask_text_input_formatter: ^2.8.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
