--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   auto_route_generator: ^7.3.2
   mask_text_input_formatter: ^2.8.0
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^4.2.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
